# hw1

./: Dockerfile  README.md  main.py  pyproject.toml  topic.txt
docker/: docker-compose.yaml
schemas/: user.avsc
src/: avro.py  config.py  consumer.py  producer.py  schemas.py
